# stm32f401-rust-hello-world

./: README.md
stm32f401_haltest/: Cargo.toml  Makefile
stm32f401_haltest/src/: main.rs
stm32f401_pac/: Cargo.toml  memory.x
stm32f401_pac/STM32F4_svd/: Release_Notes.htm
stm32f401_pac/src/: lib.rs
stm32f401_pac/src/src/: dbg.rs  dma2.rs  exti.rs  flash.rs  gpioa.rs  iwdg.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  rcc.rs  tim10.rs  tim3.rs  usart1.rs
stm32f401_pac/src/src/adc1/: cr2.rs  jofr1.rs  ltr.rs  smpr1.rs  sqr2.rs
stm32f401_pac/src/src/adc_common/: ccr.rs  csr.rs
stm32f401_pac/src/src/crc/: cr.rs  dr.rs  idr.rs
stm32f401_pac/src/src/dbg/: dbgmcu_apb1_fz.rs  dbgmcu_cr.rs
stm32f401_pac/src/src/dma2/: hisr.rs  lisr.rs  s0fcr.rs  s0m0ar.rs  s0m1ar.rs  s0ndtr.rs  s1cr.rs  s1fcr.rs  s1m0ar.rs  s1ndtr.rs  s1par.rs  s2m0ar.rs  s3fcr.rs  s3m0ar.rs  s3m1ar.rs  s3ndtr.rs  s3par.rs  s4cr.rs  s4m0ar.rs  s4m1ar.rs  s4ndtr.rs  s5fcr.rs  s5m0ar.rs  s5m1ar.rs  s5ndtr.rs  s5par.rs  s6cr.rs  s6m0ar.rs  s6ndtr.rs  s6par.rs  s7cr.rs  s7fcr.rs  s7m0ar.rs  s7m1ar.rs  s7par.rs
stm32f401_pac/src/src/exti/: ftsr.rs  imr.rs
stm32f401_pac/src/src/flash/: acr.rs  cr.rs  keyr.rs
stm32f401_pac/src/src/gpioa/: afrl.rs  bsrr.rs  ospeedr.rs  pupdr.rs
stm32f401_pac/src/src/gpiob/: moder.rs  ospeedr.rs  pupdr.rs
stm32f401_pac/src/src/gpioh/: afrh.rs  pupdr.rs
stm32f401_pac/src/src/i2c3/: cr2.rs  dr.rs  oar2.rs  sr1.rs  trise.rs
stm32f401_pac/src/src/i2s2ext/: cr1.rs  cr2.rs  rxcrcr.rs  sr.rs
stm32f401_pac/src/src/iwdg/: kr.rs  pr.rs
stm32f401_pac/src/tim5/: ccmr2_output.rs
(+329 files in other folders)
