[package]
authors = ["Jakub Mikians <2897102+jakub-m@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "quickstart"
version = "0.1.0"

[dependencies]
# cortex-m = "0.6.0"
# cortex-m-rt = "0.7.1"
# cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
# embedded-hal = "0.2.7"
# rtt-target = { version = "0.3.1", features = ["cortex-m"] }
# 
# # Uncomment for the panic example.
# # panic-itm = "0.4.1"
# 
# # Uncomment for the allocator example.
# # alloc-cortex-m = "0.4.0"
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.6.13", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]

# [dependencies.stm32f4xx-hal]
# version = "0.13.1"
# features = ["rt", "stm32f401"] # replace the model of your microcontroller here

[[bin]]
name = "quickstart"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
